#371 #413 : replace "/" with File.pathSeparator to be more OS agnostic